--- a/public/index.html
+++ b/public/index.html
@@ -5,7 +5,8 @@
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <meta name="theme-color" content="#000000" />
-  <meta name="description" content="Web site created using create-react-app" />
+  <meta name="description" content="Download the best apps for you to customize your Mac" />
+  <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
   <title>Fancy Macbook App</title>
 </head>
 
