Add meta tags for twitter card

--- a/public/index.html
+++ b/public/index.html
@@ -8,6 +8,13 @@
   <meta name="description" content="Download the best apps for you to customize your Mac" />
   <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
   <title>Fancy Macbook App</title>
+  <meta name="twitter:card" content="summary_large_image" />
+  <meta data-hid="twitter:title" name="twitter:title" property="twitter:title" content="Fancy Macbook App">
+  <meta data-hid="twitter:description" name="twitter:description" property="twitter:description"
+    content="Fancy Macbook App allows you to specifically select the applications included in the brew and gives the ready terminal command to install on your mac through these selected applications.">
+  <meta data-hid="twitter:image" name="twitter:image" property="twitter:image"
+    content="https://i.hizliresim.com/dsxi0wq.png">
+  <meta data-hid="twitter:image:alt" name="twitter:image:alt" property="twitter:image:alt" content="Fancy Macbook App">
 </head>
 
 <!-- Google tag (gtag.js) -->
