Add github logo

--- a/public/index.html
+++ b/public/index.html
@@ -30,12 +30,11 @@
   <noscript>You need to enable JavaScript to run this app.</noscript>
   <div id="root"></div>
   <div style="position: fixed; right: 10px; top: 10px; z-index: 999;">
-    <a href="https://www.producthunt.com/posts/fancy-macbook-apps?utm_source=badge-featured&utm_medium=badge&utm_souce=badge-fancy&#0045;macbook&#0045;apps"
-      target="_blank" rel="noreferrer"><img
-        src="https://api.producthunt.com/widgets/embed-image/v1/featured.svg?post_id=377348&theme=light"
-        alt="Fancy&#0032;Macbook&#0032;Apps - Download&#0032;the&#0032;best&#0032;apps&#0032;for&#0032;you&#0032;to&#0032;customize&#0032;your&#0032;Mac | Product Hunt"
-        style="width: 200px; height: 54px;" width="250" height="54" /></a>
+    <a href="https://github.com/alpercun/fancy-macbook-app">
+      <img src="./github-mark-white.svg" alt="GitHub" style="width: 32px; height: 32px; cursor: pointer;">
+    </a>
   </div>
+
 </body>
 
 </html>
